# Destruct-Server

./: .gitignore  Cargo.toml  Dockerfile  readme.md
src/: creds.rs  db.rs  debug.rs  main.rs  utc.rs
