[package]
name = "destruct-server"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
tower-http = {version = "0.6.2", features = ["cors"]}
serde = {version = "1.0.219", features = ["derive"]}
reqwest = {version = "0.12.15", features = ["json"]}
tokio = {version = "1.44.1", features = ["full"]}
futures-util = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
serde_json = "1.0.140"
futures = "0.3.31"
dotenv = "0.15.0"
axum = "0.8.3"
